fixing spacing

--- a/css/index.css
+++ b/css/index.css
@@ -48,22 +48,22 @@ ul{
 .pageNav, .currentNav{
 	display:inline-block;
 	height:82%;
-	width:45%;
+	width:40%;
+	min-width:40%;
 	border:solid #3B3D55 10px;
 	background:white;
-	
 	padding-top:20px;
 	margin-top:5%;
 	
 
 }
 .pageNav{
-	margin-left:1%;
+	margin-left:7%;
 	float:left;
 }
 .currentNav{
 	float:right;
-	margin-right:1%;
+	margin-right:7%;
 }
 
 
@@ -84,8 +84,8 @@ ul{
 	background:white;
 	clear:both;
 	margin:0 auto;
-	margin-top:50%;
-	height:5%;
+	margin-top:60%;
+	height:180%;
 	width:40%;
 	padding:1%;
 
@@ -100,8 +100,8 @@ ul{
 .mainContainer{
 	text-align:center;
 	padding-top:1%;
-	width:65%;
-	height:70%;
+	width:100%;
+	height:100%;
 	margin:0 auto;
 
 }
